# ocfl-crawler-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.devcontainer/: devcontainer.json
src/: lib.rs  main.rs  object.rs  storage.rs  utils.rs
tests/: cli.rs  cmd_list.rs  findr.rs  get_object_id.rs  integration_test.rs  is_directory.rs  is_object_root.rs  is_storage_root.rs
tests/cli/1.0/: 0=ocfl_1.0
tests/cli/1.1/: 0=ocfl_1.1
tests/cli/1.2/: 0=ocfl_1.2
tests/cli/1.2/minimal_no_content/: 0=ocfl_object_1.2
tests/cli/expected/: name_a.txt  name_csv.txt  name_csv_mp3.txt  name_txt_path_a_d.txt  path1.txt  path_a.txt  path_a_b.txt  path_a_b_d.txt  path_d.txt  path_g.txt  storage_roots.err  storage_roots.out  storage_roots.txt  storage_roots_absolute.out  storage_roots_all.out  storage_roots_identifier.out  storage_roots_key.out  storage_roots_namespace.out  type_d.txt  type_d_name_a.txt  type_d_path_a.txt  type_d_path_a_b.txt  type_d_path_a_b_d.txt  type_d_path_d.txt  type_f.txt  type_f_l.txt  type_f_name_a.txt  type_f_path_a.txt  type_f_path_a_b.txt  type_f_path_a_b_d.txt  type_f_path_d.txt  type_l.txt  unreadable_dir.txt
